[package]
name = "modularis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = {version = "2.1", default-features = false, optional = true}
bincode = {version = "1.3.3", default-features = false, optional = true}
bytemuck = {version = "1.7.2", default-features = false, optional = true}
[features]
cstruct-ffi = []
bincode-ffi = ["bincode", "cstruct-ffi"]
bytemuck-ffi = ["bytemuck", "cstruct-ffi"]
